Enforce uniqueness of StockAgregate by date and region, and ensure region-awareness in rectification.